Fix for ticket #182909 (icons don't appear on IE11)

--- a/css/gd-core.css
+++ b/css/gd-core.css
@@ -133,8 +133,8 @@ table.gd-frame{
 .gd-tools-left,.gd-tools-right{ overflow: hidden; display:inline-block;}
 .gd-tools-left{ width:40%; font-size:initial;}
 .gd-tools-right{ width:59%;text-align:right;}
-div.gd-tools-right button.ui-button{height:22px; background:transparent url(images/tools-separator.png) no-repeat top left; }
-div.gd-tools-left button.ui-button{	height:22px; background:transparent url(images/tools-separator.png) no-repeat top right; }
+div.gd-tools-right button.ui-button{width: 9%; height:22px; background:transparent url(images/tools-separator.png) no-repeat top left; }
+div.gd-tools-left button.ui-button{width: 9%;	height:22px; background:transparent url(images/tools-separator.png) no-repeat top right; }
 
 div.gd-tools-right .ui-state-hover.ui-icon,
 div.gd-tools-left .ui-state-hover.ui-icon {background-image: url(images/ui-icons_222222_256x240.png); }
